--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,27 +3,13 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 52,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 10,
-"scroll_position": 26.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://results.txt]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 126,
-"scroll_position": 98.0,
+"row": 16,
+"scroll_position": 0.0,
 "selection": false,
-"syntax_highlighter": "Plain Text"
+"syntax_highlighter": "GDScript"
 }
 
 [res://Structs/base_struct.gd]
@@ -52,8 +38,22 @@ state={
 "column": 7,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 56,
-"scroll_position": 39.7793,
+"row": 59,
+"scroll_position": 52.1453,
+"selection": false,
+"syntax_highlighter": "Plain Text"
+}
+
+[res://benchmarks.txt]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 33,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 12,
+"scroll_position": 49.0,
 "selection": false,
 "syntax_highlighter": "Plain Text"
 }
