--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,14 +29,14 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://test.tscn")
 current_scene="res://test.tscn"
-center_split_offset=0
+center_split_offset=-896
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Structs/base_struct.gd", "res://README.md", "res://results.txt", "res://test.gd"]
+open_scripts=["res://Structs/base_struct.gd", "res://README.md", "res://benchmarks.txt", "res://test.gd"]
 selected_script="res://README.md"
 open_help=["Node", "Object"]
 script_split_offset=122
