--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -36,9 +36,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Structs/base_struct.gd", "res://README.md", "res://benchmarks.txt", "res://test.gd"]
-selected_script="res://README.md"
-open_help=["Node", "Object"]
+open_scripts=["res://Structs/base_struct.gd", "res://benchmarks.txt", "res://README.md", "res://test.gd"]
+selected_script="res://benchmarks.txt"
+open_help=["Dictionary", "Node", "Object", "PackedStringArray", "Signal", "WorkerThreadPool"]
 script_split_offset=122
 list_split_offset=0
 
