--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,4 +1,46 @@
-[res://test.gd]
+[res://README.md]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 21,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 83,
+"scroll_position": 67.0,
+"selection": false,
+"syntax_highlighter": "Plain Text"
+}
+
+[res://structs/base_struct.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 12,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 35,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://test/benchmarks.txt]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 35,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 4,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Plain Text"
+}
+
+[res://test/test.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -16,44 +58,16 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Structs/base_struct.gd]
+[res://test/test_struct.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 12,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
-}
-
-[res://README.md]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 3,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 42,
-"row": 59,
-"scroll_position": 60.0,
-"selection": false,
-"syntax_highlighter": "Plain Text"
-}
-
-[res://benchmarks.txt]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 43,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 241,
-"scroll_position": 148.817,
-"selection": false,
-"syntax_highlighter": "Plain Text"
 }
