--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -3,5 +3,11 @@ list=Array[Dictionary]([{
 "class": &"BaseStruct",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Structs/base_struct.gd"
+"path": "res://structs/base_struct.gd"
+}, {
+"base": &"BaseStruct",
+"class": &"TestStruct",
+"icon": "",
+"language": &"GDScript",
+"path": "res://test/test_struct.gd"
 }])
