--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://README.md")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Structs/")
+dock_filesystem_selected_paths=PackedStringArray("res://test/benchmarks.txt")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://test/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://test.tscn")
-current_scene="res://test.tscn"
-center_split_offset=-896
+open_scenes=PackedStringArray("res://test/test.tscn")
+current_scene="res://test/test.tscn"
+center_split_offset=-431
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Structs/base_struct.gd", "res://benchmarks.txt", "res://README.md", "res://test.gd"]
-selected_script="res://benchmarks.txt"
+open_scripts=["res://structs/base_struct.gd", "res://test/benchmarks.txt", "res://README.md", "res://test/test.gd", "res://test/test_struct.gd"]
+selected_script="res://test/benchmarks.txt"
 open_help=["Dictionary", "Node", "Object", "PackedStringArray", "Signal", "WorkerThreadPool"]
 script_split_offset=122
 list_split_offset=0
