prepared for asset library

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=472
+dock_hsplit_2=352
 dock_hsplit_3=-472
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://test/benchmarks.txt")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://test/")
+dock_filesystem_selected_paths=PackedStringArray("res://test/example_struct.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://test/", "res://addons/", "res://addons/structs/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -36,10 +36,10 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://structs/base_struct.gd", "res://test/benchmarks.txt", "res://README.md", "res://test/test.gd", "res://test/test_struct.gd"]
-selected_script="res://test/benchmarks.txt"
-open_help=["Dictionary", "Node", "Object", "PackedStringArray", "Signal", "WorkerThreadPool"]
-script_split_offset=122
+open_scripts=["res://test/example_struct.gd", "res://README.md", "res://addons/structs/struct.gd", "res://test/test.gd"]
+selected_script="res://README.md"
+open_help=["Object", "PackedInt64Array", "RefCounted", "Resource", "Signal", "Struct"]
+script_split_offset=446
 list_split_offset=0
 
 [ShaderEditor]
