--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,13 +1,13 @@
 list=Array[Dictionary]([{
-"base": &"Resource",
-"class": &"BaseStruct",
+"base": &"Struct",
+"class": &"ExampleStruct",
 "icon": "",
 "language": &"GDScript",
-"path": "res://structs/base_struct.gd"
+"path": "res://test/example_struct.gd"
 }, {
-"base": &"BaseStruct",
-"class": &"TestStruct",
-"icon": "",
+"base": &"Resource",
+"class": &"Struct",
+"icon": "res://addons/structs/Struct.svg",
 "language": &"GDScript",
-"path": "res://test/test_struct.gd"
+"path": "res://addons/structs/struct.gd"
 }])
