--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,27 +3,13 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 83,
-"scroll_position": 67.0,
+"row": 80,
+"scroll_position": 73.8159,
 "selection": false,
 "syntax_highlighter": "Plain Text"
-}
-
-[res://structs/base_struct.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 12,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 35,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
 }
 
 [res://test/benchmarks.txt]
@@ -31,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 43,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
-"scroll_position": 0.0,
+"row": 27,
+"scroll_position": 28.0,
 "selection": false,
 "syntax_highlighter": "Plain Text"
 }
@@ -45,28 +31,38 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 74,
+"column": 49,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 64,
-"selection_from_line": 19,
-"selection_to_column": 74,
-"selection_to_line": 19,
+"row": 13,
+"scroll_position": 45.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://test/test_struct.gd]
+[res://addons/structs/struct.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 20,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://test/example_struct.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 61,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
