--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -30,14 +30,14 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://test/test.tscn")
 current_scene="res://test/test.tscn"
 center_split_offset=-431
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=4
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://test/example_struct.gd", "res://README.md", "res://addons/structs/struct.gd", "res://test/test.gd"]
-selected_script="res://README.md"
+selected_script="res://test/example_struct.gd"
 open_help=["Object", "PackedInt64Array", "RefCounted", "Resource", "Signal", "Struct"]
 script_split_offset=446
 list_split_offset=0
