Finalizing class methods

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://test/example_struct.gd")
+dock_filesystem_selected_paths=PackedStringArray()
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://test/", "res://addons/", "res://addons/structs/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -30,15 +30,15 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://test/test.tscn")
 current_scene="res://test/test.tscn"
 center_split_offset=-431
-selected_default_debugger_tab_idx=4
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://test/example_struct.gd", "res://README.md", "res://addons/structs/struct.gd", "res://test/test.gd"]
+open_scripts=["res://test/benchmarks.txt", "res://test/example_struct.gd", "res://README.md", "res://addons/structs/struct.gd", "res://test/test.gd"]
 selected_script="res://test/example_struct.gd"
-open_help=["Object", "PackedInt64Array", "RefCounted", "Resource", "Signal", "Struct"]
+open_help=["@GlobalScope", "Array", "float", "int", "IP", "MultiMesh", "Object", "PackedDataContainer", "PackedInt32Array", "PackedInt64Array", "RefCounted", "Resource", "Signal", "Struct"]
 script_split_offset=446
 list_split_offset=0
 
