--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://test/benchmarks_100k.txt", "res://test/example_struct.gd", "res://README.md", "res://test/README.md", "res://addons/structs/struct.gd", "res://test/test.gd"]
-selected_script="res://addons/structs/struct.gd"
+selected_script="res://README.md"
 open_help=["@GlobalScope", "Array", "float", "int", "IP", "MultiMesh", "Object", "PackedDataContainer", "PackedInt32Array", "PackedInt64Array", "RefCounted", "Resource", "Signal", "Struct"]
 script_split_offset=446
 list_split_offset=0
