--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 143,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 73,
-"scroll_position": 47.3436,
+"row": 21,
+"scroll_position": 36.74,
 "selection": false,
 "syntax_highlighter": "Plain Text"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
+"column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 285,
-"scroll_position": 202.0,
+"row": 15,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 254,
-"scroll_position": 237.0,
+"row": 196,
+"scroll_position": 132.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,27 +49,9 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 15,
-"scroll_position": 16.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
-}
-
-[res://test/benchmarks_100k.txt]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 22,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 75,
-"scroll_position": 48.0,
-"selection": true,
-"selection_from_column": 22,
-"selection_from_line": 75,
-"selection_to_column": 37,
-"selection_to_line": 75,
-"syntax_highlighter": "Plain Text"
 }
 
 [res://test/README.md]
@@ -77,11 +59,29 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 57,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
+"row": 28,
 "scroll_position": 0.0,
 "selection": false,
+"syntax_highlighter": "Plain Text"
+}
+
+[res://test/benchmarks.txt]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 24,
+"row": 29,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 29,
 "syntax_highlighter": "Plain Text"
 }
