--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://test/README.md")
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://test/", "res://addons/", "res://addons/structs/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -36,9 +36,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://test/benchmarks_100k.txt", "res://test/example_struct.gd", "res://README.md", "res://test/README.md", "res://addons/structs/struct.gd", "res://test/test.gd"]
+open_scripts=["res://test/benchmarks.txt", "res://test/example_struct.gd", "res://test/README.md", "res://README.md", "res://addons/structs/struct.gd", "res://test/test.gd"]
 selected_script="res://README.md"
-open_help=["@GlobalScope", "Array", "float", "int", "IP", "MultiMesh", "Object", "PackedDataContainer", "PackedInt32Array", "PackedInt64Array", "RefCounted", "Resource", "Signal", "Struct"]
+open_help=["@GlobalScope"]
 script_split_offset=446
 list_split_offset=0
 
